<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/studentHostel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allback"
    android:padding="10dp"
    tools:context="com.myProject.hostel.messApp.AdminConfirm">

    <TextView
        android:id="@+id/studentNam"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:text="@string/student_name"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/studentHost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685" />

    <TextView
        android:id="@+id/studentHost"
        android:layout_width="338dp"
        android:layout_height="37dp"
        android:layout_below="@+id/studentNam"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="436dp"
        android:text="@string/student_hostel"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/studentRoom"
        android:layout_width="341dp"
        android:layout_height="32dp"
        android:layout_below="@+id/studentHost"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:text="@string/student_room"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentHost"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/studentRegn1"
        android:layout_width="323dp"
        android:layout_height="53dp"
        android:layout_below="@+id/studentRoom"
        android:layout_alignParentStart="true"
        android:text="@string/student_regn"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentRoom"
        app:layout_constraintVertical_bias="0.105" />

    <Button
        android:id="@+id/acceptBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:background="@color/success"
        android:text="@string/accept"
        android:textColor="@color/light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716" />

    <Button
        android:id="@+id/rejectBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/acceptBtn"
        android:background="@color/danger"
        android:text="@string/reject"
        android:textColor="@color/light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/acceptBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="283dp"
        android:layout_height="82dp"
        android:text="@string/confirmText"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

</android.support.constraint.ConstraintLayout>
