<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allback"
    tools:context="com.myProject.hostel.messApp.AdminStudentActivity">

    <EditText
        android:id="@+id/studentRegn1"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="122dp"
        android:ems="10"
        android:hint="@string/enter_student_registration_number"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />

    <Button
        android:id="@+id/showBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="106dp"
        android:background="@color/success"
        android:text="@string/show_profile"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentRegn1"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_student_by_registration_number"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />
</android.support.constraint.ConstraintLayout>
